--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 
 <body>
   <form id="form1" name="form1">
-    <input type="text" id="input1" name="input1" class="form-control" placeholder="what should we count by?"></input>
+    <input type="text" id="input1" name="input1" class="form-control" placeholder="what absolute value should we count by?"></input>
     <label for="input1"></label>
     <input type="text" id="input2" name="input2" class="form-control" placeholder="how high should we count?"></input>
     <label for="input2"></label>
     <button type="submit" class="btn">Submit</button>
   </form>
+  <div class="container" id="results">
+    <ul>
 
+    </ul>
+  </div>
 </body>
 
 </html>
